[project]
name = "notionize"
version = "0.2.4"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mistune>=2.0.0",
    "pydantic>=2.1",
]

[dependency-groups]
dev = [
    "inline-snapshot>=0.20.2",
    "pyright>=1.1.394",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.6",
    "syrupy>=4.8.1",
]


[build-system]
requires = ['hatchling', 'hatch-fancy-pypi-readme>=22.5.0']
build-backend = 'hatchling.build'
